--- a/package.json
+++ b/package.json
@@ -14,12 +14,28 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.1.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@xenova/transformers": "^2.17.2",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
+    "chromadb": "^1.9.2",
+    "chromadb-default-embed": "^2.13.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "openai": "^4.62.1",
-    "readline-sync": "^1.4.10"
+    "puppeteer": "^23.4.0",
+    "readline-sync": "^1.4.10",
+    "reflect-metadata": "^0.2.2",
+    "routing-controllers": "^0.10.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
